src/es/1.0/attribute/attribute-input.md
# Tipo de Entrada de Atributo

Los atributos pueden tener diferentes tipos de entrada que determinan no solo cómo introduce los valores del atributo, sino también cómo los compradores pueden seleccionar los atributos en el caso de las opciones, o introducir valores.

Los Atributos de Producto son un conjunto de características que definen un producto particular o un grupo de bienes. Esto significa que tamaño, color, sabor, tipo de paquete, etc. constituyen atributos. Los atributos del producto no son solo sobre la descripción general de un producto, sino que hablan del valor de los productos que lo hace único.

| Propiedad     | Descripción                                                                                                                             |
| ------------ | --------------------------------------------------------------------------------------------------------------------------------------- |
| Text         | Un campo de entrada de una sola línea para texto.                                                                                                     |
| Text Area    | Un campo de entrada de múltiples líneas para introducir párrafos de texto, como una descripción de producto.                                             |
| Boolean      | Muestra un interruptor para alternar entre Sí y No.                                                                                         |
| Select       | Muestra una lista desplegable de valores que acepta una sola selección de valor                                                             |
| Multi Select | Muestra una lista desplegable de valores que acepta múltiples selecciones.                                                                   |
| Date         | Muestra un valor de fecha en el formato preferido.                                                                                          |
| Date Time    | Muestra un valor de fecha y hora en el formato preferido y zona horaria.                                                                   |
| Image        | Esto se usa para mostrar la imagen.                                                                                                         |
| Gallery      | Un atributo Galería que permite gestionar y mostrar múltiples imágenes y vídeos por producto, mejorando la experiencia multimedia del producto. |
| File         | Los atributos de archivo se refieren a un tipo específico de atributos que le permite asociar archivos con el producto.                            |
| Checkbox     | Representa un estado u opción que puede alternarse.                                                                                    |
| Price        | Este tipo de entrada se usa para crear campos de precio que son adicionales a los atributos predefinidos: Prices.                               |
